# cards-against-humanity

./: .env  .gitignore  Dockerfile  README.md  pyproject.toml  railway.toml
.github/workflows/: release.yml
scripts/: build.ps1  build.sh
src/cah/: client.py
src/cah.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/cah/data/: black_cards.json
src/clicards/: client.py  game_local.py  game_online.py  server.py  ui.py  updater.py
src/clicards/data/: black_cards.json  white_cards.json
