[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "clicards"
version = "0.1.0"
description = "CLI Cards Against Humanity"
authors = [{ name = "Navaneeth Krishna" }]
dependencies = ["rich", "websockets"]
requires-python = ">=3.9"

[project.optional-dependencies]
packaging = ["pyinstaller>=6.0"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
clicards = ["data/*.json"]

[project.scripts]
clicards = "clicards.client:main"
clicards-server = "clicards.server:main"
